fix: make icons light in dark mode

--- a/static-src/kx-styles.scss
+++ b/static-src/kx-styles.scss
@@ -106,6 +106,10 @@ kx-claim {
                 margin-right: 8px;
                 vertical-align: sub;
                 opacity: 0.5;
+
+                @media (prefers-color-scheme: dark) {
+                    filter: invert(1);
+                }
             }
 
             .claim__links {
